--- a/css/common.css
+++ b/css/common.css
@@ -4,17 +4,199 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
-  color: #212121;
+  color: #2e2f42;
   line-height: 1.5;
+  font-size: 16px;
 }
 
-img{
+img {
   display: block;
   height: auto;
   width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.nav-list__link {
+  letter-spacing: 0.04em;
+  transition: opacity 250ms ease-in-out;
+}
+
+.nav-list__link:hover {
+  opacity: 0.5;
+}
+
+.category__header {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33333;
+  margin-bottom: 16px;
+}
+
+.category__list {
+  max-width: 360px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.category__item {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+  max-height: 40px;
+}
+
+.item {
+  background: #f6f6fe;
+  max-width: 392px;
+  border-radius: 8px;
+  padding: 16px;
+  margin-bottom: 24px;
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 48px 24px;
+  flex-wrap: wrap;
+  max-width: 1128px;
+  margin: 0 auto;
+}
+
+.gallery li {
+  width: calc((100% - 48px) / 3);
+}
+
+.gallery li img {
+  object-fit: cover;
+  height: 300px;
+  box-shadow: 0 0 10px #000;
+  transition: transform 250ms ease-in-out;
+}
+
+.gallery li:hover img {
+  transform: scale(1.1);
+}
+
+input {
+  height: 40px;
+  border: 1px solid #808080;
+  outline: none;
+  border-radius: 4px;
+  padding: 8px 16px;
+  max-width: 360px;
+  width: 100%;
+  margin-bottom: 16px;
+  transition: border 250ms ease-in-out;
+}
+
+input:hover {
+  border: 1px solid #000;
+}
+
+input:focus {
+  border: 1px solid #808080;
+}
+
+.input__header {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33333;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 360px;
+}
+
+.login-form label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  width: 100%;
+}
+
+.login-form label input {
+  width: 100%;
+}
+
+.login-form button {
+  background: #4e75ff;
+  width: 86px;
+  height: 40px;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  font-weight: 500;
+  line-height: 1.5;
+  transition: background 250ms ease-in-out;
+}
+
+.login-form button:hover {
+  background: #6c8cff;
+}
+
+.widget {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.widget button {
+  width: 148px;
+  height: 40px;
+  background: #4e75ff;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  font-weight: 500;
+  line-height: 1.5;
+  transition: background 250ms ease-in-out;
+}
+
+.widget button:hover {
+  background: #6c8cff;
 }
